--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
     "express": "^4.18.2"
-  }
+  },
+  "name": "lms-client",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass --watch public/sass/main.scss public/style/style.css"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
